# MLFramework

./: CMakeLists.txt  README.md  main.cpp  test.cpp
MyDL/include/MyDL/: BatchNorm2d.h  Conv2d.h  Functional.h  Linear.h  Module.h  ResNet.h  Tensor.h  Transformer.h  VisionTransformer.h  WeightLoader.h
MyDL/src/: BatchNorm2d.cpp  Conv2d.cpp  Functional.cpp  Linear.cpp  Module.cpp  ResNet.cpp  Tensor.cpp  Transformer.cpp  VisionTransformer.cpp  WeightLoader.cpp  test.cpp
